--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,10 @@
     "storage"
   ],
   "action": {
-    "default_popup": "src/popup.html"
+    "default_popup": "src/popup/popup.html"
   },
   "options_ui": {
-    "page": "src/options.html",
+    "page": "src/options/options.html",
     "open_in_tab": true
   }
 }
