--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,8 @@
   "options_ui": {
     "page": "src/options/options.html",
     "open_in_tab": true
+  },
+  "background": {
+    "service_worker": "src/scripts/whisper-service-worker.js"
   }
 }
