--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "extension": "latest"
+    "extension": "latest",
+    "typescript": "^5.7.3"
   },
   "private": true,
   "author": {
