Add csp to allow running wasm in service worker

--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,8 @@
   },
   "background": {
     "service_worker": "src/scripts/whisper-service-worker.ts"
+  },
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self'; worker-src 'self' 'wasm-unsafe-eval';"
   }
 }
