Format all files

--- a/package.json
+++ b/package.json
@@ -8,12 +8,7 @@
   "name": "live-translator-extension",
   "description": "An Extension.js example.",
   "version": "0.0.1",
-  "keywords": [
-    "extension",
-    "browser-extension",
-    "web-extension",
-    "template"
-  ],
+  "keywords": ["extension", "browser-extension", "web-extension", "template"],
   "scripts": {
     "dev": "extension dev",
     "start": "extension start",
@@ -37,5 +32,5 @@
   "dependencies": {
     "@huggingface/transformers": "^3.4.0"
   },
-  "type":"module"
+  "type": "module"
 }
