--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@types/jest": "^29.5.14",
     "extension": "latest",
     "jest": "^29.7.0",
     "typescript": "^5.7.3"
