--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@biomejs/biome": "1.9.4",
     "@types/jest": "^29.5.14",
     "babel-jest": "^29.7.0",
