--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -50,4 +50,19 @@ jobs:
         run: npm ci
       - name: Run Biome lint check
         run: npm run lint
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.12.2'
+          cache: 'npm'
+      - name: Clean install dependencies
+        run: npm ci
+      - name: Run tests
+        run: npm run test
   
