--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
   "name": "live-translator-extension",
   "description": "An Extension.js example.",
   "version": "0.0.1",
-  "keywords": ["extension", "browser-extension", "web-extension", "template"],
+  "keywords": [
+    "extension",
+    "browser-extension",
+    "web-extension",
+    "template"
+  ],
   "scripts": {
     "dev": "extension dev",
     "start": "extension start",
@@ -37,7 +42,8 @@
     "url": "https://yourwebsite.com"
   },
   "dependencies": {
-    "@huggingface/transformers": "^3.4.0"
+    "@huggingface/transformers": "^3.4.0",
+    "notyf": "^3.10.0"
   },
   "type": "module"
 }
