--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "$schema": "https://json.schemastore.org/chrome-manifest.json",
   "manifest_version": 3,
   "version": "1.0",
-  "name": "live-translator-extension",
-  "description": "A chrome extension enabling live translation using openai whisper through transformerjs",
+  "name": "Live translator extension",
+  "description": "A Chrome extension providing real-time translation powered by OpenAI's Whisper model using Transformers.js locally in the browser.",
   "permissions": ["tabCapture", "activeTab", "storage"],
   "action": {
     "default_popup": "src/popup/popup.html"
