Create a patch for prod build service worker
- Something is generating a document usage in the service worker (which is not allowed in service workers) in the production build. For now workaround it using a small patch

--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   ],
   "scripts": {
     "dev": "extension dev",
-    "start": "extension start",
-    "build": "extension build",
+    "start": "npm run build && extension preview",
+    "build": "extension build && node ./patches/patch-service-worker.js",
     "format": "npx @biomejs/biome format",
     "format:write": "npx @biomejs/biome format --write",
     "lint": "npx @biomejs/biome lint",
